<resources>
    <string name="app_name">Nutech Wallet</string>
    <string name="press_back_to_exit">Press back to exit</string>
    <string name="log_in">Log In</string>
    <string name="new_account">Belum Punya Akun?</string>
    <string name="has_account">Sudah Punya Akun?</string>
    <string name="register">Daftar</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">%1$s</string>
    <string name="login_email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">%1$s</string>
    <string name="last_name">%1$s</string>
    <string name="user_first_name">Nama Depan</string>
    <string name="user_last_name">Nama Belakang</string>
    <string name="welcome">Selamat Datang</string>
    <string name="user">%1$s</string>
    <string name="your_balance">Saldo Anda</string>
    <string name="top_up">Top Up</string>
    <string name="transfer">Transfer</string>
    <string name="trx_history">Riwayat Transaksi</string>
    <string name="trx_type">Jenis Transaksi</string>
    <string name="trx_amount">Rp 100.000</string>
    <string name="view_all">Lihat Semua</string>
    <string name="update_profile">Ubah Profile</string>
    <string name="nominal_topUp">Nominal TopUp</string>
    <string name="nominal_trf">Nominal Transfer</string>
    <string name="amount">Nominal</string>
    <string name="balance">%1$s</string>
    <string name="success">Berhasil</string>
    <string name="ok">OK</string>

    <string name="drawer_profile">Profile</string>
    <string name="drawer_logout">Log Out</string>
</resources>