<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_smoke"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login_top"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.35" />

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_40sdp"
        app:srcCompat="@drawable/nutech_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="17dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:gravity="center"
        android:background="@drawable/bg_snow_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/welcome"
            android:textAllCaps="false"
            android:textSize="@dimen/_16ssp"
            android:gravity="center"
            android:fontFamily="@font/dmsansregular"
            android:textColor="@color/red"/>

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/edt_outline"
            android:fontFamily="@font/dmsansregular"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:drawableStart="@drawable/pwd_icon"
            android:fontFamily="@font/dmsansregular"
            android:drawablePadding="@dimen/_5sdp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/edt_outline"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            android:autofillHints="no" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            style="@style/btnGeneral"
            android:textSize="@dimen/_13ssp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:fontFamily="@font/dmsansbold"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_15sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:gravity="start"
                android:text="@string/new_account"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/dmsansregular"
                android:textColor="@color/white_smoke_2"/>

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="false"
                android:gravity="start"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/dmsansregular"
                android:textColor="@color/red"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.35"/>

</androidx.constraintlayout.widget.ConstraintLayout>